modified powconfig, vimrc

--- a/home/.powconfig
+++ b/home/.powconfig
@@ -1,1 +1,1 @@
-export PATH=/Users/ms2/.rbenv/shims:/Users/m2/Developer/bin:$PATH
+export PATH=/Users/ms2/.rbenv/shims:/Users/ms2/Developer/bin:$PATH
