--- a/home/.gemrc
+++ b/home/.gemrc
@@ -1,11 +1,11 @@
 ---
 :backtrace: false
-:benchmark: false
 :bulk_threshold: 1000
 :sources:
 - http://gems.github.com
 - http://rubygems.org
-- http://gems.fuchs-gewuerze.local/
+- http://gems.bleacherreport.com
 :update_sources: true
 :verbose: true
+benchmark: false
 gem: --no-ri --no-rdoc
