--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,17 @@
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+bind-key y run "tmux show-buffer | reattach-to-user-namespace pbcopy" \; display-message "Copied tmux buffer to system clipboard"
+
+set -g status-keys vi
+setw -g mode-keys vi
+
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -g history-limit 5000
@@ -12,6 +26,7 @@ set -g utf8 on
 set -g default-terminal "screen-256color"
 
 setw -g automatic-rename off
+setw -g allow-rename off
 
 bind-key -r C-j select-pane -t :.-
 bind-key -r C-k select-pane -t :.+
@@ -26,6 +41,8 @@ set -g status-left ''
 set -g status-right ''
 
 set-window-option -g window-status-current-bg red
+
+set-titles on
 
 #### COLOUR (Solarized light)
 
