--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,7 +1,3 @@
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
-
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
@@ -42,7 +38,12 @@ set -g status-right ''
 
 set-window-option -g window-status-current-bg red
 
-set-titles on
+#### Vim-like navigation
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)vim(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 #### COLOUR (Solarized light)
 
