--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -18,11 +18,10 @@ set -g base-index 0
 
 setw -g utf8 on
 set -g utf8 on
-
+set -g status-utf8 on
 set -g default-terminal "screen-256color"
 
 setw -g automatic-rename off
-setw -g allow-rename off
 
 bind-key -r C-j select-pane -t :.-
 bind-key -r C-k select-pane -t :.+
@@ -76,3 +75,5 @@ set-option -g display-panes-colour brightred #orange
 
 # clock
 set-window-option -g clock-mode-colour green #green
+
+source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
