--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,93 @@
-BTSync/dotfiles/.tmux.conf
+set -g mouse on
+
+bind-key y run "tmux show-buffer | reattach-to-user-namespace pbcopy" \; display-message "Copied tmux buffer to system clipboard"
+
+bind = set -g synchronize-panes
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+set -g status-keys vi
+setw -g mode-keys vi
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+set -g history-limit 5000
+
+set -g bell-action any
+
+set -g base-index 0
+
+setw -g utf8 on
+set -g utf8 on
+set -g status-utf8 on
+set -g default-terminal "screen-256color"
+
+bind-key -r C-j select-pane -t :.-
+bind-key -r C-k select-pane -t :.+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
+set -g status-keys vi
+
+set-window-option -g window-status-current-bg red
+
+#### Vim-like navigation
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?|emacs)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+#### COLOUR (Solarized dark)
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# I am the sole master of names
+set-window-option -g automatic-rename off
+set-option -g allow-rename off
+
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-utf8 on
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
+
+set -sg escape-time 0
