--- a/.zplugrc
+++ b/.zplugrc
@@ -17,7 +17,6 @@ if [ -f $ZPLUG_HOME/init.zsh ]; then
   zplug "marzocchi/zsh-notify", use:"notify.plugin.zsh"
   zplug "mrowa44/emojify", as:command
   zplug "oconnor663/zsh-sensible"
-  zplug "rimraf/k", as:command
   zplug "zlsun/solarized-man"
 
   zplug "zsh-users/zsh-completions"
@@ -27,6 +26,10 @@ if [ -f $ZPLUG_HOME/init.zsh ]; then
   zplug "mollifier/anyframe"
 
   zplug "miekg/lean"
+
+  # Own plugins
+
+  zplug "~/src/mschae/zsh-functions", from:local, defer:2
 
   # Install plugins if there are plugins that have not been installed
   if ! zplug check --verbose; then
