--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,11 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
+# Open panes with same path
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 bind = set -g synchronize-panes
 
 run '~/.tmux/plugins/tpm/tpm'
